Add a parent marker to the embedded player for compatibility with future restrictions

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,7 +53,7 @@
     <section class="jumbotron">
       <h2 class="screenreader">Embedded Twitch stream</h2>
       <div></div>
-      <div><iframe title="Watch DeviCat live!" src="https://player.twitch.tv?channel=devicat" allowfullscreen="" style="border: 0" allow="autoplay; fullscreen" width="768" height="432"></iframe></div>
+      <div><iframe title="Watch DeviCat live!" src="https://player.twitch.tv?channel=devicat&parent=devicatoutlet.com" allowfullscreen="" style="border: 0" allow="autoplay; fullscreen" width="768" height="432"></iframe></div>
       <div>
         <a href="https://www.patreon.com/devicatoutlet"><img src="img/patreon.png" alt="Become a Patron"></a><br>
         <a href="https://discord.gg/devicat"><img src="img/discord.png" alt="Join the discussion"></a>
