--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
     <nav>
       <input type=checkbox>
       <div id=raptor_button><div></div><div></div><div></div></div>
-      <a class=keep href="/"><img src="img/devicatlogo2021.png" alt="DeviCat"></a>
+      <a class=keep href="/"><img src="img/devicatlogocloseup.png" alt="DeviCat"></a>
       <div style="flex-grow: 1"></div>
       {%- for dest in site.nav %}{%- for info in dest -%}
         {%- if info[1] -%}
