--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,7 @@ h4 {font-size: 1.5em;}
 
 h2:before, h2:after {
 	display: inline-block;
-	content: url("https://s.w.org/images/core/emoji/2.2.1/svg/1f499.svg");
+	content: url("https://s.w.org/images/core/emoji/2.2.1/svg/1f49c.svg");
 	position: relative;
 	top: 0.5em; left: -0.25em;
 	margin-left: 0.4em;
