Replace old Love emote with new one

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/main.css">
-    <link rel="icon" href="https://static-cdn.jtvnw.net/emoticons/v1/819883/3.0">
+    <link rel="icon" href="https://static-cdn.jtvnw.net/emoticons/v2/307350032/default/light/3.0">
 
   </head>
 
@@ -71,7 +71,7 @@
   </main>
 
 <div id=fader></div>
-<div id="popup"><div><img src="https://static-cdn.jtvnw.net/emoticons/v1/819883/3.0" alt="[placeholder]" role="presentation"><div id="popup-caption"></div></div></div>
+<div id="popup"><div><img src="https://static-cdn.jtvnw.net/emoticons/v2/307350032/default/light/3.0" alt="[placeholder devicatLove]" role="presentation"><div id="popup-caption"></div></div></div>
 
 <footer>
   <p>
