--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,15 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" href="https://static-cdn.jtvnw.net/emoticons/v2/307350032/default/light/3.0">
 
+	  <!-- MailerLite Universal -->
+<script>
+    (function(w,d,e,u,f,l,n){w[f]=w[f]||function(){(w[f].q=w[f].q||[])
+    .push(arguments);},l=d.createElement(e),l.async=1,l.src=u,
+    n=d.getElementsByTagName(e)[0],n.parentNode.insertBefore(l,n);})
+    (window,document,'script','https://assets.mailerlite.com/js/universal.js','ml');
+    ml('account', '63308');
+</script>
+<!-- End MailerLite Universal -->
   </head>
 
   <body class="{{ page.category | default: "devi" }}-cat">
