--- a/css/main.css
+++ b/css/main.css
@@ -131,31 +131,32 @@ html {overflow: overlay;}
 #fader {
 	position: fixed;
 	left: 0; top: 0; right: 0; bottom: 0;
-	background: black;
-	opacity: 0; z-index: -1;
-    transition: opacity .25s, z-index .25s;
+	background: rgba(0, 0, 0, 0);
+	z-index: -1;
+	transition: background .25s, z-index .25s;
 }
-.show-modal #fader {opacity: 0.5; z-index: 1999;}
+.show-modal #fader {background: rgba(0, 0, 0, 0.5); z-index: 1999;}
 #popup {
 	position: fixed;
 	left: 0; top: 0; right: 0; bottom: 0;
 	z-index: 2000;
-	padding-top: 30px;
 	visibility: hidden;
 	overflow: auto;
 	transition: visibility .5s;
 }
 .show-modal #popup {visibility: visible;}
 /* Fade the image in and pull it in from above the screen */
-#popup img {
+#popup figure {
 	position: relative;
 	top: -500px;
 	opacity: 0;
 	transition: top .5s, opacity .5s;
 }
-.show-modal #popup img {top: 0px; opacity: 1;}
-#popup > div {
-	margin: auto;
+.show-modal #popup figure {top: 0px; opacity: 1;}
+#popup figcaption {
+	text-align: center;
+	background: white;
+	border: 1px solid rebeccapurple;
 }
 
 /* The Aboot page has a lot of magic to it :( */
