--- a/css/main.css
+++ b/css/main.css
@@ -102,7 +102,7 @@ h3:after {
 footer {
 	text-align: center;
 	margin-top: 100px;
-	background: #e3e3e3;
+	background: var(--white);
 	padding: 12px;
 }
 footer svg,
