remove padding from gallery items

--- a/css/main.css
+++ b/css/main.css
@@ -156,11 +156,10 @@ img {
 	cursor: pointer;
 	margin: 20px;
 	border-radius: 20px;
-	padding: 10px;
-	box-shadow: 0 0 5px rgba(0, 0, 0, 0.15)
+	box-shadow: 0 0 7px rgba(0, 0, 0, 0.20)
 }
 #gallery ~ p img:hover {
-	box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+	box-shadow: 0 0 9px rgba(0,0,0,0.30);
 	transform: translateY(-2px);
 }
 
