--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
     <nav>
       <input type=checkbox>
       <div id=raptor_button><div></div><div></div><div></div></div>
-      <a class=keep href="/"><img src="img/dclogoicon.png" alt="DeviCat"></a>
+      <a class=keep href="/">HOME</a>
       <div style="flex-grow: 1"></div>
       {%- for dest in site.nav %}{%- for info in dest -%}
         {%- if info[1] -%}
