--- a/css/main.css
+++ b/css/main.css
@@ -330,9 +330,10 @@ nav {
 	display: flex;
 	flex-flow: row nowrap;
 	align-items: center;
-	padding: 0.5rem 0;
 	min-height: 48px;
-	gap: 8
+	gap: 8px;
+	padding: 0 50px;
+
 }
 nav input {
 	/* The magical checkbox */
@@ -360,15 +361,29 @@ nav img {
 	width: 48px;
 }
 nav a {
-	color: var(--pink);
-	font-weight: normal;
+	color: var(--white);
+	font-weight: 700;
+	background: var(--pink);
+	border-radius: 4px;
+	box-shadow: 2px 2px 0 rgba(0, 0, 0, 0.3);
+	transition: box-shadow 150ms, transform 150ms;
 }
+
+nav a:hover {
+	box-shadow: 4px 4px 0 rgba(0, 0, 0, 0.3);
+	transform: translateY(-2px);
+}
+
+nav a:active {
+	box-shadow: 2px 2px 0 rgba(0, 0, 0, 0.3);
+	transform: translateY(-2px);
+}
+
 nav > a,
 nav > .nav-menucontainer {
 	padding: 0.5rem;
 }
-nav > .keep {
-	margin-bottom: -3rem; /* Let the Home button drift below its frame a bit */
+nav > .keep { /* Let the Home button drift below its frame a bit */
 }
 
 .ml-onclick-form {
