--- a/css/main.css
+++ b/css/main.css
@@ -371,6 +371,7 @@ nav a {
 	border-radius: 4px;
 	box-shadow: 0px 2px 0 rgba(0, 0, 0, 0.3);
 	transition: box-shadow 150ms, transform 150ms;
+	text-transform: uppercase;
 }
 
 nav a:hover {
