--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
 	box-sizing: border-box;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montez&family=Roboto&display=swap');
 
 /* colors */
 :root {
@@ -148,6 +148,13 @@ img {
 	display: block;
 	margin: auto;
 	max-width: 100%;
+}
+
+#gallery h1 {
+	text-align: center;
+	font-family: 'Montez', cursive;
+	color: var(--black);
+	font-size: 4em;
 }
 
 #gallery p {
