--- a/css/main.css
+++ b/css/main.css
@@ -150,7 +150,7 @@ img {
 	max-width: 100%;
 }
 
-#gallery h1 {
+#gallery ~ h1 {
 	text-align: center;
 	font-family: 'Montez', sans-serif;
 	color: var(--black);
