--- a/css/main.css
+++ b/css/main.css
@@ -371,18 +371,16 @@ nav img {
 	width: 48px;
 }
 nav a {
-	color: var(--white);
-	font-weight: 700;
-	background: var(--pink);
+	color: var(--black);
+	font-weight: 500;
+	background: var(--white);
 	border-radius: 4px;
-	box-shadow: 0px 2px 0 rgba(0, 0, 0, 0.3);
-	transition: box-shadow 150ms, transform 150ms;
+	transition: background 0.2s ease-in-out;
 	text-transform: uppercase;
 }
 
 nav a:hover {
-	box-shadow: 0px 4px 0 rgba(0, 0, 0, 0.3);
-	transform: translateY(-2px);
+	background: var(--pink);
 }
 
 nav a:active {
