--- a/css/main.css
+++ b/css/main.css
@@ -60,7 +60,7 @@ h4 {
 }
 
 h1 {
-	font-size: 2.5em;
+	font-size: 4em;
 }
 h2 {
 	font-size: 2em;
@@ -150,7 +150,7 @@ img {
 	max-width: 100%;
 }
 
-#gallery ~ h1 {
+h1#gallery {
 	text-align: center;
 	font-family: 'Montez', sans-serif;
 	color: var(--black);
@@ -372,7 +372,7 @@ nav img {
 }
 nav a {
 	color: var(--black);
-	font-weight: 500;
+	font-weight: 700;
 	background: var(--white);
 	border-radius: 4px;
 	transition: background 0.2s ease-in-out;
