--- a/css/main.css
+++ b/css/main.css
@@ -375,6 +375,7 @@ nav a {
 	font-weight: 700;
 	background: var(--white);
 	border-radius: 4px;
+	letter-spacing: 1px;
 	transition: background 0.2s ease-in-out;
 	text-transform: uppercase;
 }
