move font import to html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- CSS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montez&family=Roboto&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" href="https://static-cdn.jtvnw.net/emoticons/v2/307350032/default/light/3.0">
 
