--- a/css/main.css
+++ b/css/main.css
@@ -292,10 +292,16 @@ ul.cards img {
 }
 
 ul.cards li {
-	border: 1px solid #ddd;
-	border-radius: 0.25rem;
+	border-radius: 20px;
 	margin: 10px;
 	text-align: center;
+	box-shadow: 0 0 5px rgba(0, 0, 0, 0.05);
+}
+
+ul.cards li:hover {
+	box-shadow: 0 4px 7px rgba(0,0,0,0.20);
+	transform: translateY(-4px);
+	transition: 160ms ease-in-out all;
 }
 
 #contact ~ p a {
