fix mobile cards layout

--- a/css/main.css
+++ b/css/main.css
@@ -434,7 +434,7 @@ nav > .keep { /* Let the Home button drift below its frame a bit */
 		display: none;
 	}
 
-	.ul.cards {
+	.ul.cards.layout {
 		grid-template-columns: 1fr;
 	}
 }
