add min height to main

--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,7 @@ main {
 	width: calc(100% - 90px);
 	max-width: 1140px;
 	min-width: 400px;
+	min-height: 800px;
 }
 
 a {
@@ -405,11 +406,6 @@ nav > .keep { /* Let the Home button drift below its frame a bit */
 	border: 2px solid white;
 	border-radius: 5px;
 	padding: 32px;
-}
-
-.ml-embedded {
-	margin-top: 2em;
-	margin-bottom: 2em;
 }
 
 /* Below 822px of width, collapse to Raptor Mode */
