remember to add justify-content to newsletter

--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@ main {
 	width: calc(100% - 90px);
 	max-width: 1140px;
 	min-width: 400px;
-	min-height: 700px;
+	min-height: 500px;
 }
 
 a {
@@ -480,6 +480,7 @@ a {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	justify-content: center;
 	margin-top: 1em;
 }
 
