--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
 
   <body class="{{ page.category | default: "devi" }}-cat">
 
-    <!-- Navigation -->
+    <!-- Navigation. -->
     <!-- Hamburger menu styling and technique inspired by https://codepen.io/erikterwan/pen/EVzeRP by Erik Terwan and made available under the terms of the MIT license -->
     <nav>
       <input type=checkbox>
