--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -93,6 +93,7 @@
     <a href="https://www.ko-fi.com/devicat" title="Ko-fi: DeviCat"><img src="/img/kofilogo.png" alt="ko-fi: devicat"></a>
     <a href="https://www.redbubble.com/people/devicatoutlet/shop" title="redbubble: DeviCatOutlet"><img src="/img/redbubbleicon.png" alt="redbubble: DeviCatOutlet"></a>
     <a href="https://www.twitch.tv/devicat" title="Twitch: DeviCat"><img src="/img/twitchlogo.png" alt="Twitch: DeviCat"></a>
+    <a href="https://www.twitter.com/devicatart" title="Twitter: devicatart"><img src="/img/twitterlogo.png" alt="Twitter: devicatart"></a>
   </p>
   <p>&copy; DeviCat 2023</p>
 </footer>
