--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -87,7 +87,7 @@
 
 <footer>
   <p>
-    <a href="https://www.discord.gg/devicat" title="Discord: Devicat"><img src="/img/discordlogo.png" alt="Discord: devicat"></a>
+    <a href="https://www.discord.gg/devicat" title="Discord: DeviCat"><img src="/img/discordlogo.png" alt="Discord: devicat"></a>
     <a href="https://www.facebook.com/devicat.artist" title="Facebook: DeviCat.Artist"><img src="/img/fblogo.png" alt="Facebook: DeviCat Artist"></a>
     <a href="https://www.instagram.com/devicat.art" title="Instagram: DeviCat.Art"><img src="/img/iglogo.png" alt="Instagram: DeviCat.Art"></a>
     <a href="https://www.ko-fi.com/devicat" title="Ko-fi: DeviCat"><img src="/img/kofilogo.png" alt="ko-fi: devicat"></a>
