--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -88,7 +88,9 @@
 <footer>
   <p>
     <a href="https://www.discord.gg/devicat" title="Discord: DeviCat"><img src="/img/discordlogo.png" alt="Discord: devicat"></a>
+    <a href="https://www.facebook.com/devicat.artist" title="Facebook: DeviCat.Artist"><img src="/img/fbilogo.png" alt="Facebook: DeviCat.Artist"></a>
     <a href="https://www.ko-fi.com/devicat" title="Ko-fi: DeviCat"><img src="/img/kofilogo.png" alt="ko-fi: DeviCat"></a>
+    <a href="https://www.instagram.com/devicat.art" title="Instagram: DeviCat.Art"><img src="/img/iglogo.png" alt="Instagram: DeviCat.Art"></a>
     <a href="https://www.redbubble.com/people/devicatoutlet/shop" title="redbubble: DeviCatOutlet"><img src="/img/redbubbleicon.png" alt="redbubble: DeviCatOutlet"></a>
     <a href="https://www.twitch.tv/devicat" title="Twitch: DeviCat"><img src="/img/twitchlogo.png" alt="Twitch: DeviCat"></a>
   </p>
