--- a/css/main.css
+++ b/css/main.css
@@ -53,7 +53,7 @@ h2,
 h3,
 h4 {
 	text-align: center;
-	font-weight: 500; /* Medium, rather than full bold. Is this coffee or text? */
+	font-weight: 500;
 	margin: 0 0 0.5rem 0;
 	line-height: 1.2;
 }
