add .wrap class and the rest of the candicat images

--- a/css/main.css
+++ b/css/main.css
@@ -484,7 +484,7 @@ a {
 	margin-top: 1em;
 }
 
-/* Hide from screenreaders (they're scary!) */
+/* Hide from screenreaders */
 .screenreader {
 	position: absolute;
 	width: 1px;
