--- a/css/main.css
+++ b/css/main.css
@@ -144,6 +144,10 @@ img {
 }
 
 h1#gallery {
+	visibility: hidden;
+}
+
+hr + h1#gallery {
 	text-align: center;
 	font-family: 'Montez', sans-serif;
 	color: var(--black);
