--- a/css/main.css
+++ b/css/main.css
@@ -487,7 +487,7 @@ a {
 	margin-top: 1em;
 }
 
-/* Hide from screenreaders */
+/* Hide from display, retain for screenreaders */
 .screenreader {
 	position: absolute;
 	width: 1px;
