--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,8 +50,14 @@
             <a class="nav-dropdown {{active}}" href="{{ url }}" id="dropdown-{{ url }}" role="button" aria-haspopup="true" aria-expanded="false">{{ name }}{{current}}</a>
             <div class="nav-submenu" aria-labelledby="dropdown-{{ url }}">
               {%- for subdest in info[1] -%}
-                {%- assign url = subdest | downcase | replace: " ", "" | replace: "->", "" | replace: ",", "-" %}
-                <a href="{{ url }}">{{ subdest }}</a>
+                {%- if subdest[1] -%}
+                  {%- assign subname = subdest[0] -%}
+                  {%- assign suburl = subdest[1] -%}
+                {%- else -%}
+                  {%- assign subname = subdest -%}
+                  {%- assign suburl = subdest | downcase | replace: " ", "" -%}
+                {%- endif -%}
+                <a href="{{ suburl }}">{{ subname }}</a>
               {%- endfor %}
             </div>
           </div>
