--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -93,6 +93,7 @@
 
 <footer>
   <p>
+    <a href="https://www.cara.app/devicat" title="Cara: DeviCat"><img src="/img/caralogo.png" alt="Cara: DeviCat"></a>
     <a href="https://www.discord.gg/devicat" title="Discord: DeviCat"><img src="/img/discordlogo.png" alt="Discord: devicat"></a>
     <a href="https://www.facebook.com/devicat.artist" title="Facebook: DeviCat.Artist"><img src="/img/fblogo.png" alt="Facebook: DeviCat.Artist"></a>
     <a href="https://www.devicat-shop.fourthwall.com" title="Fourthwall: DeviCat"><img src="/img/fwlogo.png" alt="Fourthwall: DeviCat"></a>
