--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -102,7 +102,7 @@
     <a href="https://www.redbubble.com/people/devicatoutlet/shop" title="redbubble: DeviCatOutlet"><img src="/img/redbubbleicon.png" alt="redbubble: DeviCatOutlet"></a>
     <a href="https://www.tiktok.com/@devicat.art" title="Tiktok: DeviCat"><img src="/img/tiktoklogo.png" alt="Tiktok: DeviCat"></a>
     <a href="https://www.twitch.tv/devicat" title="Twitch: DeviCat"><img src="/img/twitchlogo.png" alt="Twitch: DeviCat"></a>
-    <a href="https://www.twitter.com" title="Twiter: DeviCatArt"><img src="/img/twitterlogo.png" alt="Twitter: DeviCatArt"></a>
+    <a href="https://www.twitter.com/devicatart" title="Twiter: DeviCatArt"><img src="/img/twitterlogo.png" alt="Twitter: DeviCatArt"></a>
     <a href="https://www.youtube.com/@devicatart" title="YouTube: DeviCatArt"><img src="/img/youtubelogo.png" alt="YouTube: DeviCatArt"></a>
   </p>
   <p>&copy; DeviCat 2024</p>
