Revert "Social Links"
This reverts commit 3655c4c2fccc7843b7816ef2dc661327f178e44f.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -93,12 +93,17 @@
 
 <footer>
   <p>
+    <a href="https://www.cara.app/devicat" title="Cara: devicat"><img src="/img/caralogo.png" alt="Cara: devicat"></a>
     <a href="https://www.discord.gg/devicat" title="Discord: DeviCat"><img src="/img/discordlogo.png" alt="Discord: devicat"></a>
     <a href="https://www.facebook.com/devicat.artist" title="Facebook: DeviCat.Artist"><img src="/img/fblogo.png" alt="Facebook: DeviCat.Artist"></a>
+    <a href="https://www.devicat-shop.fourthwall.com" title="Fourthwall: DeviCat"><img src="/img/fwlogo.png" alt="Fourthwall: DeviCat"></a>
     <a href="https://www.instagram.com/devicat.art" title="Instagram: DeviCat.Art"><img src="/img/iglogo.png" alt="Instagram: DeviCat.Art"></a>
     <a href="https://www.ko-fi.com/devicat" title="Ko-fi: DeviCat"><img src="/img/kofilogo.png" alt="ko-fi: DeviCat"></a>
     <a href="https://www.redbubble.com/people/devicatoutlet/shop" title="redbubble: DeviCatOutlet"><img src="/img/redbubbleicon.png" alt="redbubble: DeviCatOutlet"></a>
+    <a href="https://www.tiktok.com/@devicat.art" title="Tiktok: DeviCat"><img src="/img/tiktoklogo.png" alt="Tiktok: DeviCat"></a>
     <a href="https://www.twitch.tv/devicat" title="Twitch: DeviCat"><img src="/img/twitchlogo.png" alt="Twitch: DeviCat"></a>
+    <a href="https://www.twitter.com/devicatart" title="Twiter: DeviCatArt"><img src="/img/twitterlogo.png" alt="Twitter: DeviCatArt"></a>
+    <a href="https://www.youtube.com/@devicatart" title="YouTube: DeviCatArt"><img src="/img/youtubelogo.png" alt="YouTube: DeviCatArt"></a>
   </p>
   <p>&copy; DeviCat 2024</p>
 </footer>
