--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montez&family=Roboto&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="/css/main.css">
     <link rel="icon" href="https://static-cdn.jtvnw.net/emoticons/v2/307350032/default/light/3.0">
 
 	  <!-- MailerLite Universal -->
