add card styling to blog posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,9 @@
 layout: default
 ---
 
+<a class="cards">
 <h2>{{ page.title }}</h2>
 <p>{{ page.date | date_to_string }} - {{ page.author }}</p>
+</a>
 
 {{ content }}
